<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thinken.azmobmeter.MeterReadout" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txt_readMenu"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/readout_menu"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/bt_read"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:onClick="todo"
            android:padding="10dp"
            android:text="@string/read_meter" />

        <Button
            android:id="@+id/bt_billing"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:onClick="todo"
            android:padding="10dp"
            android:text="@string/billing" />

        <Button
            android:id="@+id/bt_clockAdjust"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:onClick="todo"
            android:padding="10dp"
            android:text="@string/clock_adjust" />

        <Button
            android:id="@+id/bt_clearAlarms"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:onClick="clearAlarms"
            android:padding="10dp"
            android:text="@string/alarm_clean" />

        <Button
            android:id="@+id/bt_meterInfo"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:onClick="todo"
            android:padding="10dp"
            android:text="@string/meter_info" />

        <Button
            android:id="@+id/bt_meterDisconnect"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_red"
            android:onClick="disconnect"
            android:padding="10dp"
            android:text="@string/disconnect" />
    </LinearLayout>

</RelativeLayout>