<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thinken.azmobmeter.MainMenu" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txt_connect"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/options_menu"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/bt_connect"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:onClick="connectBluetooth"
            android:padding="10dp"
            android:text="@string/bt_connect" />

        <Button
            android:id="@+id/bt_reports"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:onClick="todo"
            android:padding="10dp"
            android:text="@string/bt_reports" />

        <Button
            android:id="@+id/bt_engineering"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:onClick="openReadouts"
            android:padding="10dp"
            android:text="@string/engineering_mode" />

        <Button
            android:id="@+id/bt_exit"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bt_red"
            android:onClick="exit"
            android:padding="10dp"
            android:text="@string/exit" />
    </LinearLayout>

</RelativeLayout>